nav spacing issue fixing

--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,6 @@ nav a:active{
 
 
 
-
 .element {
   padding-bottom: 1rem;
 /*  border-top-width: 0.15rem;*/
@@ -137,10 +136,11 @@ h2 {
   font-weight: 100;
   margin: 0rem;
   font-size: 5rem;
-  color: #000000;
+  color: #3541f5;
   text-decoration:none;
   padding-bottom:1rem; 
   margin-left:-0.4rem; 
+  margin-top: -0.5rem;
 }
 
 h3 {
@@ -238,8 +238,8 @@ code {
 }
 
 section {  
-  margin-top: 1em;
-  margin-bottom: 2em;
+/*  margin-top: 1em;
+*/  margin-bottom: 2rem;
 }
 
 
@@ -247,8 +247,19 @@ section {
   INTERACTIVE ELEMENTS -------------------
 */
 
-/* Heading styling */
-.brand a{
+/* Branding styling */
+/*#brand a{
+  font-family: 'Barlow', sans-serif;
+  margin-top: 3rem;
+  margin-bottom: 5rem;
+  font-style: italic;
+  font-weight: 600;
+
+}
+*/
+
+
+/*.brand a{
   text-decoration: none;
   display: inline-block;
 
@@ -257,7 +268,7 @@ section {
 .brand a:hover, .brand a:focus {
   text-decoration: none;
 }
-
+*/
 /* Styling for the navigation button */
 .button-nav {
   display: inline-block;
@@ -357,12 +368,12 @@ a img:hover, a img:focus{
 /*COMBINED ELEMENTS -------------------*/
 
 /*Product_listing Styles*/
-.Product_Listing{
+/*.Product_Listing{
   display: flex;
   align-items: flex-start;
   flex-direction: row;
   justify-content: space-around;
-/*  text-align: center;*/
+  text-align: center;
 }
 .Product_Listing div{
   padding:1em 2em;
@@ -371,10 +382,10 @@ a img:hover, a img:focus{
   flex-direction: column ;
   justify-content: space-around;
   max-width: 90%;
-/*  text-align: center;*/
+  text-align: center;
 }
-
-.Product_Listing img {
+*/
+/*.Product_Listing img {
   width: 100%;
   height: 100%;
 }
@@ -401,11 +412,13 @@ a img:hover, a img:focus{
 
 #Product_Detail h4{
   max-width: 50%;
-}
+}*/
 
 /*About page Styles*/
 
+/*The greeting statement*/
 #Name a{
+  padding-top: 0.5rem;
   color:#3541f5;
 }
 
@@ -423,12 +436,7 @@ a img:hover, a img:focus{
 #aboutContainer img{
   max-width: 50%;
   height: auto;
-  margin-top: 5rem;
  }
-
-#aboutContainer h2{
-  padding-top: 4rem;
-}
 
 #aboutContainer h4{
   padding-top: 2rem;
